@@ -1,3 +1,11 @@
+2014-03-04 John Wu <John dot Wu at ACM dot org>
+	* src/colValues.cpp: review all sorting functions to check for the
+	condition identified by Divya
+
+2014-03-04 Divya Chandrasekar <chadivya at a9 dot com>
+	* src/colValues.cpp: add statement to sort the second half of the
+	list of strings
+
 2014-03-02 John Wu <John dot Wu at ACM dot org>
 	* example/tiapi.c:476 logical error, "nv=n;" should have been
 	"nv=n+n;"
